# dqlite

./: .clang-format  .clang-tidy  .codespellrc  .dir-locals.el  .git-blame-ignore-revs  .gitignore  .go-wrapper  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  README_ANDROID.md  README_CH.md  README_MACOS.md  README_WINDOWS.md  SECURITY.md  STYLE.md  acinclude.m4  build-sqlite.sh  cluster.go  config.go  configure.ac  configure~  demo.c  demo_test.go  dqlite.pc.in  driver.go  driver_test.go  fsm.go  http.go  http_test.go  integration_grpc_test.go  integration_test.go  log.go  log_test.go  (+9 more)
.github/: dependabot.yml
.github/scripts/: compare_tracef_output.py  generate-snapshot.sh  generate_tracef_test.py
.github/workflows/: build-and-test.yml  cla-check.yml  coverity.yml  downstream.yml  external-raft.yml  latest-deps.yml  linting.yml  nolz4.yaml  packages.yml  security.yml  spelling.yml  static.yml  test-tracing.yml  xarch.yml
bt/: request
c/: .dir-locals.el  .gitignore  Makefile.am  configure.ac
c/include/: dqlite.h
c/src/: binary.h  conn.c  conn.h  db.c  db.h  error.c  error.h  file.c  format.c  format.h  fsm.c  fsm.h  gateway.c  gateway.h  lifecycle.c  lifecycle.h  log.h  message.c  message.h  metrics.c  options.c  options.h  protocol.capnp  protocol.capnp.c  protocol.capnp.h  queue.c  queue.h  registry.h  request.c  request.h  response.c  response.h  schema.h  server.c  service.c  stmt.c  stmt.h  vfs.c  vfs.h
c/test/: client.c  client.h  cluster.c  cluster.h  log.c  log.h  message.c  message.h  replication.c  request.c  request.h  response.c  response.h  runner.c  server.c  server.h  socket.c  socket.h  suite.c  suite.h  test_conn.c  test_conn.h  test_db.c  test_db.h  test_dqlite.c  test_dqlite.h  test_error.c  test_error.h  test_file.c  test_format.c  test_gateway.c  test_gateway.h  test_integration.c  test_integration.h  test_message.c  test_message.h  test_queue.c  test_queue.h  test_registry.c  test_registry.h  (+12 more)
ci/: download-sqlite.sh
cli/: main.go
cli/cmd/: dump.go  root.go
cmd/dqlite/: bench.go  delete.go  dump.go  root.go
command/: code.go  commands.go  commands.pb.go  commands.proto  commands_test.go
connection/: dsn.go  dsn_test.go  registry.go  registry_test.go  testing.go
contrib/: build-static.sh
debian/: control  copyright  libdqlite1.18-unstable-dev.install  libdqlite1.18.install  rules
doc/: cross-platform-porting-plan.md  faq.md  index.md  protocol.md
doc/state-machines/: exec.mmd
include/: dqlite.h
include/dqlite/: client.h
internal/bindings/: cluster.go  conn.go  datatype.go  dqlite.go  dqlite_test.go  error.go  logging.go  replication.go  server.go  server_test.go  sqlite3.go  sqlite3_test.go  vfs.go
internal/client/: buffer.go  client.go  client_test.go  config.go  connector.go  connector_test.go  dial.go  errors.go  message.go  message_export_test.go  message_internal_test.go  message_test.go  request.go  response.go  schema.go  schema.sh  store.go
internal/command/: commands.go  commands.pb.go  commands.proto  commands_test.go  doc.go  example_test.go
internal/commands/: commands.go  commands.pb.go  commands.proto  commands_test.go  doc.go  example_test.go
internal/connection/: dsn.go  dsn_example_test.go  dsn_test.go  example_test.go  open.go  open_test.go  registry.go  registry_example_test.go  registry_export_test.go  registry_test.go  snapshot.go  snapshot_test.go  testing.go  uri.go  uri_example_test.go  uri_test.go
internal/log/: backend.go  func.go  func_test.go  levels.go  levels_test.go  logger.go  logger_test.go
internal/logging/: func.go  levels.go  levels_test.go  logger.go  logger_test.go  testing.go
internal/protocol/: commands.go  commands.pb.go  commands.proto  commands_test.go  example_test.go
internal/registry/: conn.go  conn_export_test.go  conn_test.go  fsm.go  hook.go  hook_test.go  registry.go  registry_test.go  trace.go  txn.go  txn_test.go
internal/replication/: fsm.go  fsm_32bit.go  fsm_386.go  fsm_64bit.go  fsm_amd64.go  fsm_export_test.go  fsm_test.go  integration_test.go  methods.go  methods_export_test.go  methods_test.go  testing.go  trace.go
internal/server/: server.go  server_test.go
internal/store/: range.go  replay.go
internal/timeline/: cursor.go  cursor_export_test.go  cursor_test.go  event.go  event_export_test.go  event_test.go  thread.go  thread_export_test.go  thread_test.go  timeline.go  timeline_test.go
internal/trace/: benchmark_test.go  buffer_test.go  cover.out  cursor_export_test.go  cursor_test.go  entry.go  entry_export_test.go  entry_test.go  field_test.go  registry.go  registry_export_test.go  registry_test.go  set_export_test.go  set_test.go  time.go  tracer.go  tracer_export_test.go  tracer_test.go
internal/transaction/: registry.go  registry_test.go  state.go  txn.go  txn_data_test.go  txn_test.go
m4/: .gitignore  pkg.m4
recover/delete/: delete.go
recover/dump/: dump.go  options.go
replication/: fsm.go  fsm_test.go  integration_test.go  methods.go  methods_test.go  testing.go
src/: binary.h  bind.c  bind.h  buffer.c  buffer.h  byte.h  client.c  client.h  client_protocol.c  client_protocol.h  command.c  command.h  config.c  config.h  conn.c  conn.h  conn_.c  conn_.h  db.c  db.h  db_.c  db_.h  debug.h  dqlite.c  error.c  error.h  file.c  file.h  follower.c  follower.h  format.c  format.h  fsm.c  fsm.h  gateway.c  gateway.h  gateway_.c  gateway_.h  id.c  id.h  (+55 more)
src/client/: easy.c  protocol.c  protocol.h
src/lib/: addr.c  (+27 more)
test/: case.c  case.h  client.c  client.h  cluster.c  cluster.h  fs.c  fs.h  leak.c  leak.h  log.c  log.h  mem.c  mem.h  message.c  message.h  munit.c  munit.h  replication.h  runner.c  runner.h  server.c  server.h  socket.c  socket.h  test_conn.c  test_conn_.c  test_db.c  test_error.c  test_file.c  test_format.c  test_gateway.c  test_integration.c  test_message.c  test_queue.c  test_registry.c  test_replication.c  test_request.c  test_response.c  test_schema.c  (+4 more)
testdata/: demo.go
transaction/: registry.go  registry_test.go  txn.go  txn_test.go
(+264 files in other folders)
